[package]
name = "lazy_clone"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
async-stream = "0.3.6"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.28", features = ["stream"] }
tokio = { version = "1.48.0", features = ["fs"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
